Added Github and Google+ sections

--- a/app/styles/_config.scss
+++ b/app/styles/_config.scss
@@ -6,9 +6,10 @@
 $black: #000000;
 $white: #ffffff;
 
-$light-grey: #dddddd;
-$grey: #333333;
-$dark-grey: #222222;
+$light-grey-on-light: #dddddd;
+$dark-grey-on-light: #999999;
+$light-grey-on-dark: #333333;
+$dark-grey-on-dark: #222222;
 
 $red: #cc0000;
 
