--- a/app/styles/atoms/_buttons.scss
+++ b/app/styles/atoms/_buttons.scss
@@ -2,7 +2,7 @@
 	background-color: $white;
 	padding: 0.8em;
 	font: 1.7em/1em $secondary_font;
-	border: 1px solid $dark-grey;
+	border: 1px solid $dark-grey-on-dark;
 	text-transform: uppercase;
 	overflow: hidden;
 	margin-bottom: -1em;
