--- a/app/styles/molecules/_mail-form.scss
+++ b/app/styles/molecules/_mail-form.scss
@@ -2,7 +2,7 @@
 	padding: 3em 5% 0;
 	width: 100%;
 	margin: 0 auto;
-	background-color: $dark-grey;
+	background-color: $dark-grey-on-dark;
 	@include box-sizing(border-box);
 
 	label {
