--- a/app/styles/atoms/_copy.scss
+++ b/app/styles/atoms/_copy.scss
@@ -1,6 +1,6 @@
 .copy {
 	margin-top: 4em;
 	padding: 1em 0;
-	background-color: $dark-grey;
-	color: $light-grey;
+	background-color: $dark-grey-on-dark;
+	color: $light-grey-on-light;
 }
