--- a/app/styles/templates/_index.scss
+++ b/app/styles/templates/_index.scss
@@ -1,11 +1,52 @@
+%black-section {
+	background-color: $black;
+	color: $white;
+	position: relative;
+}
+
+%section {
+	padding-top: 3em;
+	text-align: center;
+
+	.items {
+		overflow: hidden;
+		padding-bottom: 10em;
+	}
+}
+
 body {
 	font-family: $primary_font;
 	font-size: $small-font-size;
 }
 
-#container {
-	padding: 0;
+nav {
+	position: fixed;
+	top: 0;
+	width: 100%;
+	height: 0.5em;
 	@include box-sizing(border-box);
+	z-index: 1;
+
+	&, ul {
+		background-color: $white;
+		@include transition(0.2s all linear);
+	}
+	&.work_section {
+		&, ul {
+			background: $light-grey-on-light;
+		}
+	}
+	ul {
+		text-align: center;
+		padding: 0.2em 1em;
+
+		li {
+			display: inline-block;
+			padding: 1em 2%;
+			cursor: pointer;
+			text-transform: lowercase;
+		}
+	}
 }
 
 header {
@@ -40,73 +81,65 @@ header {
 	}
 }
 
-nav {
-	position: fixed;
-	top: 0;
-	width: 100%;
-	height: 0.5em;
-	@include box-sizing(border-box);
-	z-index: 1;
+#container {
+	padding: 0;
 
-	&, ul {
-		background-color: $white;
-		@include transition(0.2s all linear);
+	#about {
+		@extend %black-section;
+		@extend %section;
 	}
-	&.work_section {
-		&, ul {
-			background: $light-grey;
+
+	#portfolio {
+		@extend %section;
+		border-top: 1px solid $light-grey-on-light;
+
+		h2 {
+			background-color: $light-grey-on-light;
 		}
-	}
-	ul {
-		text-align: center;
-		padding: 0.2em 1em;
-
-		li {
-			display: inline-block;
-			padding: 1em 4%;
-			cursor: pointer;
-			text-transform: lowercase;
-		}
-	}
-}
-
-#portfolio {
-	border-top: 1px solid $light-grey;
-
-	h2 {
-		background-color: $light-grey;
-	}
-	#portfolio-items {
-		overflow: hidden;
-		padding-bottom: 10em;
-	}
-	.empty {
-		h3 {
-			margin: 0;
-			border-top: 1px solid $light-grey;
-			padding: 10em 0 20em;
-			text-align: center;
-			text-decoration: underline;
-			font-variant: small-caps;
-			font-size: 1.5em;
+		.empty {
+			h3 {
+				margin: 0;
+				border-top: 1px solid $light-grey-on-light;
+				padding: 10em 0 20em;
+				text-align: center;
+				text-decoration: underline;
+				font-variant: small-caps;
+				font-size: 1.5em;
+			}
 		}
 	}
 }
 
-#about, #portfolio, footer {
-	padding-top: 3em;
-	text-align: center;
-}
+#feeds {
+	@include pie-clearfix;
+	background: image-url($header_background_uri);
 
-#about, footer {
-	background-color: $black;
-	color: $white;
-	position: relative;
+	section {
+		@extend %section;
+
+		h2 {
+			background-color: $dark-grey-on-light;
+		}
+		.items {
+			padding-top: 3em;
+		}
+	}
+	#blog {
+		border-top: 1px solid $dark-grey-on-light;
+	}
 }
 
 footer {
+	@extend %black-section;
+	@extend %section;
+	clear: both;
+
 	ul {
 		padding: 1em 0;
+
+		a {
+			color: inherit;
+		}
 	}
 }
 
@@ -116,7 +149,7 @@ footer {
 		font-size: $base-font-size;
 	}
 
-	#container {
+	#container, #feeds {
 		padding: 0 5%;
 	}
 
@@ -147,6 +180,16 @@ footer {
 			li {
 				padding: 0.5em 1em;
 			}
+		}
+	}
+
+	#feeds {
+		section {
+			float: left;
+			width: 50%;
+		}
+		#blog {
+			border-top: none;
 		}
 	}
 
