Made the Github script parse a JSON feed

--- a/app/styles/molecules/_feed-item.scss
+++ b/app/styles/molecules/_feed-item.scss
@@ -51,6 +51,11 @@
 		height: auto;
 		display: none;
 	}
+	.simple {
+		.title, .time {
+			display: inline-block;
+		}
+	}
 }
 
 @media #{$small} {
