Blog article meta now stay to the right of the article image

--- a/app/templates/blog.hbs
+++ b/app/templates/blog.hbs
@@ -7,7 +7,7 @@
 			<a href="{{actor.url}}">{{actor.displayName}}</a> 
 			<span>{{verb verb}}</span> 
 			{{#if annotation}}
-			<a href="{{url}}">{{annotation}}</a>
+			<a href="{{url}}">{{{annotation}}}</a>
 			{{else}}
 			{{#if title}}
 			<a href="{{url}}">{{title}}</a>
