Did some spring cleaning and added Google Analytics

--- a/app/styles/_config.scss
+++ b/app/styles/_config.scss
@@ -48,4 +48,4 @@ $portrait: "only screen and (orientation: portrait)";
 
 /////// Site Icons and Images /////// 
 // -----------------------------------------------------------------------------
-$header_background_uri: "45degree_fabric.png";
+$header-background-uri: "45degree_fabric.png";
