--- a/app/templates/portfolio.hbs
+++ b/app/templates/portfolio.hbs
@@ -1,5 +1,5 @@
 {{#each items}}
-	<div class="portfolio-piece">
+	<div class="portfolio-item">
 		{{#link uri}}<img src="/images/portfolio/{{image}}" alt="{{name}}" />{{/link}}
 		<div class="content">
 			<h3>{{#link uri}}{{name}}{{/link}}</h3>
