--- a/app/templates/github.hbs
+++ b/app/templates/github.hbs
@@ -1,36 +1,38 @@
 {{#each items}}
-<div class="blog-item feed-item">
+<div class="github-item feed-item">
+	{{> time created_at}}
 	{{#equals type 'WatchEvent'}}
-		<span class="octicon octicon-star"></span>
-		{{> time}}
 		<div class="title">
-			<a href="https://github.com/{{actor}}">{{actor}}</a> <span>starred</span> <a href="{{repository.url}}" class="css-truncate css-truncate-target">{{repository.owner}}/{{repository.name}}</a>
+			<a href="https://github.com/{{actor}}">{{actor}}</a> 
+			<span>starred</span> 
+			{{#link repository.url}}{{repository.owner}}/{{repository.name}}{{/link}}
 		</div>
 	{{else}}
 	{{#equals type 'FollowEvent'}}
-		<span class="octicon octicon-person-follow"></span>
-		{{> time}}
 		<div class="title">
-			<a href="https://github.com/{{actor}}">{{actor}}</a> <span>started following</span> <a href="{{url}}">{{payload.target.login}}</a>
+			<a href="https://github.com/{{actor}}">{{actor}}</a> 
+			<span>started following</span> 
+			{{#link url}}{{payload.target.login}}{{/link}}
 		</div>
 	{{else}}
 	{{#equals type 'PushEvent'}}
-		<span class="mega-octicon octicon-git-commit"></span>
-		{{> time}}
 		<div class="title">
-			<a href="https://github.com/{{actor}}">{{actor}}</a> <span>pushed</span> to <a href="{{repository.url}}/tree/{{substr payload.ref}}">{{substr payload.ref}}</a> at <a href="{{repository.url}}" class="css-truncate css-truncate-target">{{repository.owner}}/{{repository.name}}</a>
+			<a href="https://github.com/{{actor}}">{{actor}}</a> 
+			<span>pushed</span> to 
+			<a href="{{repository.url}}/tree/{{substr payload.ref}}">{{substr payload.ref}}</a> at 
+			{{#link repository.url}}{{repository.owner}}/{{repository.name}}{{/link}}
 		</div>
 		<div class="details">
-			{{> large-gravatar}}
+			{{> large-github-gravatar}}
 			<div class="commits pusher-is-only-committer">
 				<ul>
 					{{#each payload.shas}}
-					<li>
-						{{> small-gravatar ../../this}}
+					<li class="commit">
+						{{> small-github-gravatar ../../this}}
 						<code>
 							<a href="{{../../repository.url}}/commit/{{[0]}}">{{trimCommitCode [0]}}</a>
 						</code>
-						<blockquote>{{[2]}}</blockquote>
+						<blockquote class="original-message">{{[2]}}</blockquote>
 					</li>
 					{{/each}}
 				</ul>
@@ -38,20 +40,23 @@
 		</div>
 	{{else}}
 	{{#equals type 'IssuesEvent'}}
-		<span class="mega-octicon octicon-issue-closed"></span>
-		{{> time}}
 		<div class="title">
-			<a href="https://github.com/{{actor}}">{{actor}}</a> <span>{{payload.action}}</span> issue <a href="{{url}}">{{repository.organization}}/{{repository.name}}#{{payload.number}}</a>
+			<a href="https://github.com/{{actor}}">{{actor}}</a> 
+			<span>{{payload.action}}</span> issue 
+			{{#link url}}{{repository.organization}}/{{repository.name}}#{{payload.number}}{{/link}}
 		</div>
 		<div class="details">
-			{{> large-gravatar}}
+			{{> large-github-gravatar}}
 		</div>
 	{{else}}
 	{{#equals type 'IssueCommentEvent'}}
-		<span class="mega-octicon octicon-comment-discussion"></span>
-		{{> time}}
 		<div class="title">
-			<a href="https://github.com/{{actor}}">{{actor}}</a> <span>commented</span> on issue <a href="{{url}}">{{payload.issue_id}}</a> of {{#with repository}}<a href="{{url}}">{{owner}}/{{name}}</a>{{/with}}
+			<a href="https://github.com/{{actor}}">{{actor}}</a> 
+			<span>commented</span> on issue 
+			{{#link url}}{{payload.issue_id}}{{/link}} of 
+			{{#with repository}}
+				{{#link url}}{{owner}}/{{name}}{{/link}}
+			{{/with}}
 		</div>
 	{{/equals}}
 	{{/equals}}
