Added target="_blank" to all external links, and added more metadata to Space Advocates portfolio item

--- a/app/templates/blog.hbs
+++ b/app/templates/blog.hbs
@@ -21,7 +21,7 @@
 			{{#with object.attachments.[0]}}
 			<img class="attachment" height="{{image.height}}" width="{{image.width}}" src="{{image.url}}" />
 			<div class="content">
-				<a href="{{url}}" class="name">{{displayName}}</a>
+				<a href="{{url}}" class="name" target="_blank">{{displayName}}</a>
 				<span class="url">{{url}}</span>
 			</div>
 			{{/with}}
