--- a/app/styles/molecules/_mail-form.scss
+++ b/app/styles/molecules/_mail-form.scss
@@ -3,6 +3,7 @@
 	width: 100%;
 	margin: 0 auto;
 	background-color: $dark-grey-on-dark;
+	position: relative;
 	@include box-sizing(border-box);
 
 	label {
@@ -15,6 +16,25 @@
 	}
 	textarea {
 		height: 8em;
+	}
+	#captcha {
+		display: none;
+		position: absolute;
+		top: 0;
+		left: 0;
+		width: 100%;
+		height: 100%;
+		padding: 25%;
+		background-color: rgba(0,0,0,0.7);
+		@include box-sizing(border-box);
+
+		#recaptcha_response_field {
+			color: $white;
+
+			&.error {
+				border: $red;
+			}
+		}
 	}
 }
 
