Added text overflow rules to github commit messages

--- a/app/styles/molecules/_feed-item.scss
+++ b/app/styles/molecules/_feed-item.scss
@@ -70,6 +70,13 @@
 				display: none;
 			}
 		}
+		.original-message {
+			float: none;
+			margin-left: 6.5em;
+			white-space: nowrap;
+			text-overflow: ellipsis;
+			overflow: hidden;
+		}
 	}
 }
 
