Added slight styling to the contact form

--- a/app/styles/quarks/_forms.scss
+++ b/app/styles/quarks/_forms.scss
@@ -10,20 +10,20 @@ input, textarea {
 	width: 100%;
 	padding: 0.8em 1em;
 	background-color: $light-grey-on-dark;
-	border: 1px solid $dark-grey-on-dark;
+	border: 2px solid $dark-grey-on-dark;
 	color: $white;
-	outline: 2px solid $dark-grey-on-dark;
+	outline: none;
 	@include box-sizing(border-box);
 	@include transition(0.1s all linear);
 
 	&:focus {
-		outline-color: $white;
+		border-color: $white;
 	}
 	&.error {
-		outline-color: $red;
+		border-color: $red;
 
 		&:focus {
-			outline-color: $white;
+			border-color: $white;
 		}
 	}
 }
