--- a/app/styles/molecules/_mail-form.scss
+++ b/app/styles/molecules/_mail-form.scss
@@ -13,6 +13,8 @@
 	input, textarea {
 		float: left;
 		margin: 0 0 1em;
+		@include box-shadow(inset 0 0 0.5em $black);
+		@include border-radius(0.5em);
 	}
 	textarea {
 		height: 8em;
