--- a/app/styles/atoms/_buttons.scss
+++ b/app/styles/atoms/_buttons.scss
@@ -9,6 +9,7 @@
 	position: relative;
 	z-index: 1;
 	@include transition(0.2s all linear);
+	@include border-radius;
 
 	&.captcha {
 		& + #captcha {
@@ -36,7 +37,7 @@
 	}
 	&.sent {
 		background-color: $green;
-		
+
 		.sending-text {
 			top: 3em;
 		}
