--- a/app/styles/molecules/_feed-item.scss
+++ b/app/styles/molecules/_feed-item.scss
@@ -16,6 +16,7 @@
 		.gravatar {
 			display: block;
 			float: left;
+			@include border-radius;
 		}
 		.commits, .external, .original-share {
 			margin-left: 2em;
@@ -23,6 +24,7 @@
 
 			img {
 				float: left;
+				@include border-radius(2px);
 			}
 		}
 		code, .original-message, .original-author {
