--- a/app/styles/quarks/_forms.scss
+++ b/app/styles/quarks/_forms.scss
@@ -15,6 +15,8 @@ input, textarea {
 	outline: none;
 	@include box-sizing(border-box);
 	@include transition(0.1s all linear);
+	@include box-shadow(inset 0 0 0.4em $black);
+	@include border-radius(5px);
 
 	&:focus {
 		border-color: $white;
