--- a/app/styles/quarks/_headings.scss
+++ b/app/styles/quarks/_headings.scss
@@ -1,3 +1,8 @@
+h1 {
+	font: normal 3em/1em $secondary_font;
+	white-space: nowrap;
+}
+
 h2 {
 	opacity: 1;
 	padding: 0.8em;
@@ -14,10 +19,16 @@ h2 {
 }
 
 @media #{$small} {
+
+	h1 {
+		font-size: 5em;
+	}
+
 	h2.hidden {
 		opacity: 0;
 		width: 0;
 		height: 0;
 		color: $dark-grey-on-dark;
 	}
+
 }
