Lightened dark-grey-on-light

--- a/app/styles/_config.scss
+++ b/app/styles/_config.scss
@@ -8,7 +8,7 @@ $black: #000000;
 $white: #ffffff;
 
 $light-grey-on-light: #dddddd;
-$dark-grey-on-light: #999999;
+$dark-grey-on-light: #bbbbbb;
 $light-grey-on-dark: #333333;
 $dark-grey-on-dark: #222222;
 
