--- a/app/styles/molecules/_portfolio-item.scss
+++ b/app/styles/molecules/_portfolio-item.scss
@@ -1,6 +1,6 @@
 .portfolio-item {
 	overflow: hidden;
-	padding: 20% 1% 0;
+	padding: 5% 1% 0;
 	float: left;
 	width: 100%;
 	@include box-sizing(border-box);
@@ -30,10 +30,17 @@
 @media #{$small} {
 	.portfolio-item {
 		width: 50%;
-		padding-top: 5%;
 
 		&:nth-of-type(2n + 1) {
 			clear: both;
+
+			&:nth-last-child(1) {
+				width: 100%;
+
+				.content {
+					width: 50%;
+				}
+			}
 		}
 	}
 }
@@ -47,6 +54,30 @@
 		}
 		&:nth-of-type(3n + 1) {
 			clear: both;
+
+			&:nth-last-child(1) {
+				width: 100%;
+
+				.content {
+					width: 33%;
+				}
+			}
+			&:nth-last-child(2) {
+				width: 50%;
+
+				.content {
+					width: 66%;
+				}
+			}
+		}
+		&:nth-of-type(3n + 2) {
+			&:nth-last-child(1) {
+				width: 50%;
+
+				.content {
+					width: 66%;
+				}
+			}
 		}
 	}
 }
