--- a/app/styles/molecules/_feed-item.scss
+++ b/app/styles/molecules/_feed-item.scss
@@ -18,7 +18,7 @@
 			float: left;
 			@include border-radius;
 		}
-		.commits, .external, .original-share {
+		.commits, .external, .original-share, .repo-description {
 			margin-left: 2em;
 			padding: 0.2em 0.5em;
 
@@ -27,7 +27,7 @@
 				@include border-radius(2px);
 			}
 		}
-		code, .original-message, .original-author {
+		code, .original-message, .original-author, .repo-description p {
 			float: left;
 			margin: 0 0 0 0.5em;
 			font-size: 0.8em;
@@ -39,6 +39,8 @@
 }
 
 .blog-item {
+	@include pie-clearfix;
+
 	.external {
 		.attachment {
 			height: auto;
