--- a/app/styles/_config.scss
+++ b/app/styles/_config.scss
@@ -29,6 +29,8 @@ $secondary_font: Museo, serif;
 $base-font-size: 16px;
 $small-font-size: 12px;
 
+$fa-font-path: "../bower_components/font-awesome/fonts";
+
 /////// Config defaults for buttons ///////
 // -----------------------------------------------------------------------------
 
